--- a/css/main.css
+++ b/css/main.css
@@ -100,11 +100,25 @@ footer{
     NAV 
 =============*/
 
+.main-foto-div{
+  background-image: url('../assets/main_page_short.jpg');
+  background-size: contain;
+  background-repeat: no-repeat;
+  width: 100%;
+  height: 0;
+  padding-top: 34.48%; /* (img-height / img-width */
+}
+
+.main-foto {
+height: 100%;  
+}
+
 .nav-container {
-  position: relative;
+  position: absolute;
+  top: 0px;
   display: flex;
   justify-content: center;
-  width: calc(100% - 150px);
+  width: calc(100% - 130px);
   margin: 0px;
   padding: 0px;
 }
@@ -130,7 +144,7 @@ footer{
   display: flex;
   justify-content: center;
   align-items: center;
-  right: -130px;
+  right: -125px;
   border-bottom: 1px solid #3e2093;
   border-left: 1px solid #3e2093;
   border-right: 1px solid #3e2093;
@@ -152,7 +166,7 @@ footer{
 }
 
 .nav-flag-div {
-  width: 56px;
+  width: 48px;
   margin-bottom: 3px;
   margin-top: 3px;
   display: flex;
@@ -160,7 +174,7 @@ footer{
 }
 
 .nav-flag {
-  width: 40px;
+  width: 35px;
 }
 
 .nav_link {
@@ -217,7 +231,7 @@ footer{
   .nav-btn {
     display: flex;
     margin-top: 0px;
-    margin-right: 20px;
+    margin-left: 10px;
   }
 
   .nav-btn:hover {
@@ -225,7 +239,12 @@ footer{
   }
 
   .nav-logo-div{
-    width: 310px;
+    width: 270px;
+  }
+
+  .nav-logo {
+    padding-left: 0x;
+    padding-right: 0px;
   }
 
   .nav-box {
@@ -493,15 +512,7 @@ footer{
   cursor: pointer;
 }
 
-.main-foto-div{
-  background: url('../assets/main_page_short.jpg') center/cover no-repeat;
-  height: 70vh;
-  margin: 0px;
-}
 
-.main-foto {
-width: 100vw;  
-}
 
 .prev:hover,
 .next:hover {
