final mobile fix

--- a/css/main.css
+++ b/css/main.css
@@ -232,6 +232,7 @@ height: 100%;
     display: flex;
     margin-top: 0px;
     margin-left: 10px;
+    margin-right: 10px;
   }
 
   .nav-btn:hover {
